Project due date, auto fill leave dates, app version, added remove to project due date, changed color of task list controls Fixes : fixed smart date to reflect two different dates with diff month by comparing day of year instead of day of month

--- a/app/src/main/res/layout-land/login_layout.xml
+++ b/app/src/main/res/layout-land/login_layout.xml
@@ -37,7 +37,7 @@
             android:id="@+id/userEdtView"
             android:paddingLeft="5dp"
             android:hint="Username"
-            android:maxLines="1"
+            android:singleLine="true"
             />
 
         <EditText
@@ -50,7 +50,7 @@
             android:paddingLeft="5dp"
             android:inputType="textPassword"
             android:layout_marginTop="20dp"
-            android:maxLines="1"
+            android:singleLine="true"
             />
 
         <Button
