Added comments ,integrated firebase, fixed description refresh issue, replaced ach logo for hdpi, fixed date issue for new tasks

--- a/app/src/main/res/layout/task_details_layout.xml
+++ b/app/src/main/res/layout/task_details_layout.xml
@@ -20,111 +20,46 @@
         android:layout_height="1dp"
         android:background="@color/colorLighterGrey" />
 
-    <RelativeLayout
+
+    <com.codefish.android.taskmanager.component.commentsView.CommentsListView
+        android:id="@+id/task_details_comments_list"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_margin="10dp">
+        android:layout_height="0px"
+        android:layout_weight="60"
+        android:background="@color/colorClearGrey"
+        android:divider="@null"
+        android:dividerHeight="0dp"
+        android:padding="10dp" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:elevation="4dp"
+        android:layout_height="48dp"
+        android:layout_gravity="bottom"
+        android:orientation="horizontal"
+        android:paddingBottom="5dp"
+        android:paddingLeft="5dp"
+        android:paddingRight="5dp">
 
 
-        <TextView
-            android:id="@+id/task_details_layout_task_title"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentTop="true"
-            android:textSize="20sp"
-            android:textStyle="bold" />
 
-        <Button android:id="@+id/task_details_layout_action_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/task_details_layout_task_title"
-            android:layout_centerHorizontal="true"
-            android:visibility="gone"/>
-
-        <LinearLayout
-            android:id="@+id/task_details_owner_info_group"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/task_details_layout_action_button"
-            android:orientation="horizontal">
-
-            <RelativeLayout
-                android:layout_width="140dp"
-                android:layout_height="wrap_content">
-
-                <TextView
-                    android:id="@+id/task_details_layout_assignee_initials"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    android:layout_centerVertical="true"
-                    android:layout_marginBottom="15dp"
-                    android:layout_marginTop="15dp"
-                    android:background="@drawable/circular_label"
-                    android:gravity="center"
-                    android:textSize="10sp" />
-
-                <TextView
-                    android:id="@+id/task_details_layout_assignee"
-                    android:layout_width="100dp"
-                    android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
-                    android:layout_toRightOf="@id/task_details_layout_assignee_initials"
-                    android:ellipsize="end"
-                    android:lines="1"
-                    android:paddingLeft="5dp"
-                    android:text="Unassigned" />
-            </RelativeLayout>
-
-            <com.codefish.android.taskmanager.component.smartDateView.SmartDateButton
-                android:id="@+id/task_details_due_date"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:layout_marginLeft="15dp"
-                android:background="?android:attr/selectableItemBackground"
-                android:drawableLeft="@drawable/ic_date_range_black_18dp"
-                android:drawablePadding="5dp"
-                android:elevation="0dp"
-                android:textSize="14sp"
-                android:textAllCaps="false"
-                android:hint="Due On" />
-        </LinearLayout>
-
-        <TextView
-            android:id="@+id/task_details_description"
+        <EditText android:id="@+id/task_details_layout_comment"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_below="@id/task_details_owner_info_group" />
+            android:layout_weight="1"
+            android:background="@drawable/invisible_separator"
+            android:gravity="center_vertical"
+            android:hint="Enter a comment..."
+            android:textColorHint="@color/colorLightGrey"
+            android:textSize="16sp" />
 
-        <!--  <ListView
-              android:id="@+id/task_details_history_comments"
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content"
-              android:layout_below="@id/task_details_owner_info_group"
-              ></ListView>-->
-
-        <!--      <LinearLayout
-                  android:id="@+id/task_details_followers_group"
-                  android:layout_width="match_parent"
-                  android:layout_height="10dp"
-                  android:layout_below="@id/task_details_history_comments"
-                  android:orientation="horizontal">-->
-
-        <!--        <Button
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Folow" />
-            </LinearLayout>
-
-            <EditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/task_details_followers_group"
-                android:hint="Write a comment..."
-
-                />-->
-    </RelativeLayout>
-
+        <android.support.v7.widget.AppCompatImageButton
+            android:id="@+id/task_details_layout_add_comment_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:background="@color/colorWhite"
+            android:src="@drawable/ic_send_blue_24dp" />
+    </LinearLayout>
 
 </LinearLayout>
