--- a/app/src/main/res/layout/login_layout.xml
+++ b/app/src/main/res/layout/login_layout.xml
@@ -19,7 +19,8 @@
         android:gravity="center_horizontal|center_vertical"
         android:layout_marginTop="50dp">
 
-        <ImageView android:id="@+id/login_layout_image"
+        <ImageView android:contentDescription="An icon which represents the company's logo"
+            android:id="@+id/login_layout_image"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/company_logo"
