--- a/app/src/main/res/layout/project_item_layout.xml
+++ b/app/src/main/res/layout/project_item_layout.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:text="Project A"/>
 
-    <ImageView
+    <ImageView android:contentDescription="An icon which represents a project"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/ic_menu_list"
