--- a/app/src/main/res/layout/tag_item_layout.xml
+++ b/app/src/main/res/layout/tag_item_layout.xml
@@ -11,7 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
-    <ImageView
+    <ImageView android:contentDescription="An icon which represents a tag"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/icon_tag_small_light"
