--- a/app/src/main/res/layout/tasks_list_layout.xml
+++ b/app/src/main/res/layout/tasks_list_layout.xml
@@ -151,7 +151,7 @@
 
 
                 <com.github.clans.fab.FloatingActionButton
-                    android:id="@+id/tasks_list_layout_add_new_leave"
+                    android:id="@+id/tasks_list_layout_view_widget_action_items"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="18dp"
@@ -160,7 +160,7 @@
                     fab:fab_colorNormal="@color/colorPrimary"
                     fab:fab_colorPressed="@color/colorPrimary"
                     fab:fab_colorRipple="#99FFFFFF"
-                    fab:fab_label="@string/request_leave" />
+                    fab:fab_label="@string/send_request" />
 
                 <com.github.clans.fab.FloatingActionButton
                     android:id="@+id/tasks_list_layout_add_new_project"
